--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "jtyler",
   "license": "ISC",
   "devDependencies": {
+    "jquery": "^3.1.1",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   }
